WindowsForms_MoPhongKhoanNoMin/WindowsForms_MoPhongKhoanNoMin/LiteCAD/API/Litecad.pas

Function lcBlockAddLineTan (hBlock: Integer; hEnt1: Integer; hEnt2: Integer; Mode: Integer): Integer; stdcall; external 'litecad.dll';
Function lcBlockAddPolyline (hBlock: Integer; FitType: Integer; bClosed: Integer; bFilled: Integer): Integer; stdcall; external 'litecad.dll';
Function lcBlockAddSpline (hBlock: Integer; bClosed: Integer; bFilled: Integer): Integer; stdcall; external 'litecad.dll';
Function lcBlockAddMline (hBlock: Integer; FitType: Integer; bClosed: Integer): Integer; stdcall; external 'litecad.dll';
Function lcBlockAddRect (hBlock: Integer; Xc: Double; Yc: Double; Width: Double; Height: Double; Angle: Double; bFilled: Integer): Integer; stdcall; external 'litecad.dll';
Function lcBlockAddRect2 (hBlock: Integer; Left: Double; Bottom: Double; Width: Double; Height: Double; Rad: Double; bFilled: Integer): Integer; stdcall; external 'litecad.dll';
Function lcBlockAddCircle (hBlock: Integer; X: Double; Y: Double; Radius: Double; bFilled: Integer): Integer; stdcall; external 'litecad.dll';
Function lcBlockAddArc (hBlock: Integer; X: Double; Y: Double; Radius: Double; StartAngle: Double; ArcAngle: Double): Integer; stdcall; external 'litecad.dll';
Function lcBlockAddArc3P (hBlock: Integer; X1: Double; Y1: Double; X2: Double; Y2: Double; X3: Double; Y3: Double): Integer; stdcall; external 'litecad.dll';
Function lcBlockAddEllipse (hBlock: Integer; X: Double; Y: Double; R1: Double; R2: Double; RotAngle: Double; StartAngle: Double; ArcAngle: Double): Integer; stdcall; external 'litecad.dll';
Function lcBlockAddText (hBlock: Integer; szText: PWideChar; X: Double; Y: Double): Integer; stdcall; external 'litecad.dll';
Function lcBlockAddText2 (hBlock: Integer; szText: PWideChar; X: Double; Y: Double; Align: Integer; H: Double; WScale: Double; RotAngle: Double; Oblique: Double): Integer; stdcall; external 'litecad.dll';
Function lcBlockAddTextWin (hBlock: Integer; szText: PWideChar; X: Double; Y: Double): Integer; stdcall; external 'litecad.dll';
Function lcBlockAddTextWin2 (hBlock: Integer; szText: PWideChar; X: Double; Y: Double; Align: Integer; H: Double; WScale: Double; RotAngle: Double; Oblique: Double): Integer; stdcall; external 'litecad.dll';
Function lcBlockAddMText (hBlock: Integer; szText: PWideChar; X: Double; Y: Double; WrapWidth: Double; Align: Integer; RotAngle: Double; H: Double; WScale: Double): Integer; stdcall; external 'litecad.dll';
Function lcBlockAddArcText (hBlock: Integer; szText: PWideChar; X: Double; Y: Double; Radius: Double; StartAngle: Double; bClockwise: Integer; H: Double; WScale: Double; Align: Integer): Integer; stdcall; external 'litecad.dll';
Function lcBlockAddBlockRef (hBlock: Integer; hRefBlock: Integer; X: Double; Y: Double; Scal: Double; Angle: Double): Integer; stdcall; external 'litecad.dll';
Function lcBlockAddBlockRefID (hBlock: Integer; idRefBlock: Integer; X: Double; Y: Double; Scal: Double; Angle: Double): Integer; stdcall; external 'litecad.dll';
Function lcBlockAddBlockRefIDH (hBlock: Integer; szIdRefBlock: PWideChar; X: Double; Y: Double; Scal: Double; Angle: Double): Integer; stdcall; external 'litecad.dll';
Function lcBlockAddImageRef (hBlock: Integer; hImage: Integer; X: Double; Y: Double; Width: Double; Height: Double; bBorder: Integer): Integer; stdcall; external 'litecad.dll';
Function lcBlockAddEcw (hBlock: Integer; szFileName: PWideChar): Integer; stdcall; external 'litecad.dll';
Function lcBlockAddAttDef (hBlock: Integer; Mode: Integer; szTag: PWideChar; szPrompt: PWideChar; szDefVal: PWideChar; X: Double; Y: Double; Align: Integer; H: Double; WScale: Double; RotAngle: Double; Oblique: Double): Integer; stdcall; external 'litecad.dll';
Function lcBlockAddHatch (hBlock: Integer; szFileName: PWideChar; szPatName: PWideChar; Scal: Double; Angle: Double): Integer; stdcall; external 'litecad.dll';
Function lcBlockAddViewport (hBlock: Integer; Lef: Double; Bot: Double; Width: Double; Height: Double; DrwPntX: Double; DrwPntY: Double; DrwScale: Double; DrwAngle: Double): Integer; stdcall; external 'litecad.dll';
Function lcBlockAddFace (hBlock: Integer; Flags: Integer; x0: Double; y0: Double; z0: Double; x1: Double; y1: Double; z1: Double; x2: Double; y2: Double; z2: Double): Integer; stdcall; external 'litecad.dll';
Function lcBlockAddFace4 (hBlock: Integer; Flags: Integer; x0: Double; y0: Double; z0: Double; x1: Double; y1: Double; z1: Double; x2: Double; y2: Double; z2: Double; x3: Double; y3: Double; z3: Double): Integer; stdcall; external 'litecad.dll';
Function lcBlockAddLeader (hBlock: Integer; szText: PWideChar; Xt: Double; Yt: Double; LandDist: Double; Xa: Double; Ya: Double; Attach: Integer; Align: Integer): Integer; stdcall; external 'litecad.dll';
Function lcBlockAddDimRot (hBlock: Integer; X0: Double; Y0: Double; X1: Double; Y1: Double; Xt: Double; Yt: Double; Angle: Double; szText: PWideChar): Integer; stdcall; external 'litecad.dll';
Function lcBlockAddDimHor (hBlock: Integer; X0: Double; Y0: Double; X1: Double; Y1: Double; Yt: Double; szText: PWideChar): Integer; stdcall; external 'litecad.dll';
Function lcBlockAddDimVer (hBlock: Integer; X0: Double; Y0: Double; X1: Double; Y1: Double; Xt: Double; szText: PWideChar): Integer; stdcall; external 'litecad.dll';
Function lcBlockAddDimAli (hBlock: Integer; X0: Double; Y0: Double; X1: Double; Y1: Double; Xt: Double; Yt: Double; szText: PWideChar): Integer; stdcall; external 'litecad.dll';
Function lcBlockAddDimAli2 (hBlock: Integer; X0: Double; Y0: Double; X1: Double; Y1: Double; Dt: Double; szText: PWideChar): Integer; stdcall; external 'litecad.dll';
Function lcBlockAddDimOrd (hBlock: Integer; Xd: Double; Yd: Double; Xt: Double; Yt: Double; bX: Integer; szText: PWideChar): Integer; stdcall; external 'litecad.dll';
Function lcBlockAddDimRad (hBlock: Integer; Xc: Double; Yc: Double; Xr: Double; Yr: Double; Xt: Double; Yt: Double; szText: PWideChar): Integer; stdcall; external 'litecad.dll';
Function lcBlockAddDimRad2 (hBlock: Integer; Xc: Double; Yc: Double; R: Double; Angle: Double; TextOff: Double; szText: PWideChar): Integer; stdcall; external 'litecad.dll';
Function lcBlockAddDimDia (hBlock: Integer; Xc: Double; Yc: Double; Xr: Double; Yr: Double; Xt: Double; Yt: Double; szText: PWideChar): Integer; stdcall; external 'litecad.dll';
Function lcBlockAddDimDia2 (hBlock: Integer; Xc: Double; Yc: Double; R: Double; Angle: Double; TextOff: Double; szText: PWideChar): Integer; stdcall; external 'litecad.dll';
Function lcBlockAddDimAng (hBlock: Integer; Xc: Double; Yc: Double; X1: Double; Y1: Double; X2: Double; Y2: Double; Xa: Double; Ya: Double; TextPos: Double; szText: PWideChar): Integer; stdcall; external 'litecad.dll';
Function lcBlockAddDimAng2 (hBlock: Integer; X1: Double; Y1: Double; X2: Double; Y2: Double; X3: Double; Y3: Double; X4: Double; Y4: Double; Xa: Double; Ya: Double; TextPos: Double; szText: PWideChar): Integer; stdcall; external 'litecad.dll';
Function lcBlockAddRPlan (hBlock: Integer): Integer; stdcall; external 'litecad.dll';
Function lcBlockAddBezier (hBlock: Integer; X1: Double; Y1: Double; Angle1: Double; X2: Double; Y2: Double; Angle2: Double): Integer; stdcall; external 'litecad.dll';
Function lcBlockAddTIN (hBlock: Integer): Integer; stdcall; external 'litecad.dll';
Function lcBlockAddClone (hBlock: Integer; hEnt: Integer): Integer; stdcall; external 'litecad.dll';
Function lcBlockGetFirstEnt (hBlock: Integer): Integer; stdcall; external 'litecad.dll';
Function lcBlockGetNextEnt (hBlock: Integer; hEnt: Integer): Integer; stdcall; external 'litecad.dll';
Function lcBlockGetLastEnt (hBlock: Integer): Integer; stdcall; external 'litecad.dll';
Function lcBlockGetPrevEnt (hBlock: Integer; hEnt: Integer): Integer; stdcall; external 'litecad.dll';
Function lcBlockGetEntByID (hBlock: Integer; Id: Integer): Integer; stdcall; external 'litecad.dll';
Function lcBlockGetEntByIDH (hBlock: Integer; szId: PWideChar): Integer; stdcall; external 'litecad.dll';
Function lcBlockGetEntByKey (hBlock: Integer; Key: Integer): Integer; stdcall; external 'litecad.dll';
Function lcBlockGetTIN (hBlock: Integer; Index: Integer): Integer; stdcall; external 'litecad.dll';
Function lcBlockUnselect (hBlock: Integer): Integer; stdcall; external 'litecad.dll';
Function lcBlockSelectEnt (hBlock: Integer; hEntity: Integer; bSelect: Integer): Integer; stdcall; external 'litecad.dll';
Function lcBlockSelErase (hBlock: Integer): Integer; stdcall; external 'litecad.dll';
Function lcBlockSelMove (hBlock: Integer; dX: Double; dY: Double; bCopy: Integer; bNewSelect: Integer): Integer; stdcall; external 'litecad.dll';
Function lcBlockSelScale (hBlock: Integer; X0: Double; Y0: Double; Scal: Double; bCopy: Integer; bNewSelect: Integer): Integer; stdcall; external 'litecad.dll';
Function lcBlockSelRotate (hBlock: Integer; X0: Double; Y0: Double; Angle: Double; bCopy: Integer; bNewSelect: Integer): Integer; stdcall; external 'litecad.dll';
Function lcBlockSelMirror (hBlock: Integer; X1: Double; Y1: Double; X2: Double; Y2: Double; bCopy: Integer; bNewSelect: Integer): Integer; stdcall; external 'litecad.dll';
Function lcBlockSelExplode (hBlock: Integer): Integer; stdcall; external 'litecad.dll';
Function lcBlockSelJoin (hBlock: Integer; Delta: Double): Integer; stdcall; external 'litecad.dll';
Function lcBlockGetFirstSel (hBlock: Integer): Integer; stdcall; external 'litecad.dll';
Function lcBlockGetNextSel (hBlock: Integer): Integer; stdcall; external 'litecad.dll';
Function lcEntErase (hEnt: Integer; bErase: Integer): Integer; stdcall; external 'litecad.dll';
Function lcEntMove (hEnt: Integer; dX: Double; dY: Double): Integer; stdcall; external 'litecad.dll';
Function lcEntScale (hEnt: Integer; X0: Double; Y0: Double; Scal: Double): Integer; stdcall; external 'litecad.dll';
Function lcEntRotate (hEnt: Integer; X0: Double; Y0: Double; Angle: Double): Integer; stdcall; external 'litecad.dll';
Function lcEntMirror (hEnt: Integer; X1: Double; Y1: Double; X2: Double; Y2: Double): Integer; stdcall; external 'litecad.dll';
Function lcEntExplode (hEnt: Integer; bSelect: Integer): Integer; stdcall; external 'litecad.dll';
Function lcEntOffset (hEnt: Integer; Dist: Double): Integer; stdcall; external 'litecad.dll';
Function lcEntToTop (hEnt: Integer): Integer; stdcall; external 'litecad.dll';
Function lcEntToBottom (hEnt: Integer): Integer; stdcall; external 'litecad.dll';
Function lcEntToAbove (hEnt: Integer; hEnt2: Integer): Integer; stdcall; external 'litecad.dll';
Function lcEntToUnder (hEnt: Integer; hEnt2: Integer): Integer; stdcall; external 'litecad.dll';
Function lcEntGetGrip (hEnt: Integer; iGrip: Integer; pX: Pdouble; pY: Pdouble): Integer; stdcall; external 'litecad.dll';
Function lcEntPutGrip (hEnt: Integer; iGrip: Integer; X: Double; Y: Double): Integer; stdcall; external 'litecad.dll';
Function lcEntUpdate (hEnt: Integer): Integer; stdcall; external 'litecad.dll';
Function lcEntCopyBase (hEnt: Integer; hEntFrom: Integer): Integer; stdcall; external 'litecad.dll';
Function lcIntersection (hEnt: Integer; hEnt2: Integer): Integer; stdcall; external 'litecad.dll';
Function lcInterGetPoint (iPoint: Integer; pX: Pdouble; pY: Pdouble): Integer; stdcall; external 'litecad.dll';
Function lcPlineAddVer (hPline: Integer; hVer: Integer; X: Double; Y: Double): Integer; stdcall; external 'litecad.dll';
Function lcPlineAddVer2 (hPline: Integer; hVer: Integer; X: Double; Y: Double; Param: Double; W0: Double; W1: Double): Integer; stdcall; external 'litecad.dll';
Function lcPlineAddVerDir (hPline: Integer; hVer: Integer; Ang: Double; Length: Double): Integer; stdcall; external 'litecad.dll';
Function lcPlineDeleteVer (hPline: Integer; hVer: Integer): Integer; stdcall; external 'litecad.dll';
Function lcPlineGetFirstVer (hPline: Integer): Integer; stdcall; external 'litecad.dll';
Function lcPlineGetNextVer (hPline: Integer; hVer: Integer): Integer; stdcall; external 'litecad.dll';
Function lcPlineGetLastVer (hPline: Integer): Integer; stdcall; external 'litecad.dll';
